@@ -1,3 +1,4 @@
+- use proper display settings for multiple monitors (2023/02/17 MS)
 - properly link to libintl (2023/02/17 Dmitry Marakasov)
 - properly install icons (2023/02/03 MS)
 - use config directory as fallback for highscores (2023/01/28 MS)
